# Rapid-Engine

./: .config  .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CGEditor.c  CGEditor.h  Engine.c  Engine.h  HitboxEditor.c  HitboxEditor.h  InfoByType.c  InfoByType.h  Interpreter.c  Interpreter.h  Nodes.c  Nodes.h  ProjectManager.c  ProjectManager.h  TextEditor.c  TextEditor.h  build_version.h  definitions.c  definitions.h  unity.c  version.h
Engine/raylib/projects/VS2022/: raylib.sln
Engine/resources/: resources.h  textures.c
Projects/Example/: Example.cg  ex.txt  textdocument.txt
Projects/Tetris/: Tetris.cg  Tetris.config  engine.config  random.abc  textdocument.txt
